* CBRT does not produce wrong results anymore (#230)
* Application window does not re-open in same position on Windows (#264)
* Parenthesis matching when using virtual keypad (#273)
* Application window does not get focus on launch (#282)
* Bad background of virtual keypad buttons with dark themes (#288)
* Crash on input of large hex numbers (#349)

Improvements:
* Allow only one instance of the application running (raise existing) (#159)
* Both comma and dot are now accepted as radix character (#184)
* Dock windows are now raised when opened in tabbed mode (#200)
* Dock windows are now allowed in all docking areas (#202)
* Language is now chosen through a combo box (#207)
* Fixed point is now the default result format (#223)
* Division by zero notification in auto-hiding tip instead of popup (#231)
* Partial result popup obstructs input field when menu bar disabled (#251)
* Weird looking alternating background with some color schemes (#252)
* Buttons in math book expand side-window (#253)
* Removed appearance of modal message box after insertion of invalid
  expression. An auto-hiding label is shown instead.
* Huge numbers logarithms don't fail anymore (#289)
* Current result tip doesn't cover input box fo 50-digit precision anymore (#322)

Additions:
* Integer division '\' operator (#62)
* Binary logic AND and OR functions (#90)
* Bit shift '<<' and '>>' operators (#90)
* Settings to automatically clear variables and history on exit (#191)
* Result display font setting (#319)
* Euler number (constant e=2.718...) (#320)
* History dock is now selectable and copyable (#324)
* Power operators (superscript 0-9 digits) (#325)
* Syntax highlighting in result display
* Arabic translation

==============================================================================
SpeedCrunch 0.10.1
==============================================================================
Fixes:
* Keypad button "=" (#176)
* Incomplete math book link upon clicking (#177)